[gd_scene load_steps=8 format=3 uid="uid://cnlkksx2t41ao"]

[ext_resource type="PackedScene" uid="uid://b6m4ssexmagbi" path="res://UI/Casino/Slots/reel.tscn" id="1_em2ls"]
[ext_resource type="Script" path="res://UI/Casino/Slots/slot_machine_ui.gd" id="1_vmooi"]
[ext_resource type="Texture2D" uid="uid://2h7xds4jkteq" path="res://Assets/casino/slots/slotSpriteSheet.png" id="2_x50wt"]
[ext_resource type="AudioStream" uid="uid://b42o8bh41hes8" path="res://Assets/casino/slots/sounds/spinSound.mp3" id="4_j0np1"]

[sub_resource type="Animation" id="Animation_784kr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_3uunq"]
resource_name = "spin"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_l8s5y"]
_data = {
"RESET": SubResource("Animation_784kr"),
"spin": SubResource("Animation_3uunq")
}

[node name="slot_machine_ui" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vmooi")

[node name="spriteContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -108.0
offset_top = -69.0
offset_right = -68.0
offset_bottom = -29.0
grow_horizontal = 2
grow_vertical = 2

[node name="Sprite2D" type="Sprite2D" parent="spriteContainer"]
position = Vector2(108, 69)
texture = ExtResource("2_x50wt")
hframes = 2
vframes = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="spriteContainer/Sprite2D"]
libraries = {
"": SubResource("AnimationLibrary_l8s5y")
}

[node name="reelcontainer4" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -974.0
offset_top = -470.0
offset_right = -934.0
offset_bottom = -430.0
grow_horizontal = 2
grow_vertical = 2

[node name="reel" parent="reelcontainer4" instance=ExtResource("1_em2ls")]
position = Vector2(929, 470)
scale = Vector2(1, 1)

[node name="reelcontainer2" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -938.0
offset_top = -470.0
offset_right = -898.0
offset_bottom = -430.0
grow_horizontal = 2
grow_vertical = 2

[node name="reel" parent="reelcontainer2" instance=ExtResource("1_em2ls")]
position = Vector2(929, 470)
scale = Vector2(1, 1)
reelId = 2

[node name="reelcontainer3" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -902.0
offset_top = -470.0
offset_right = -862.0
offset_bottom = -430.0
grow_horizontal = 2
grow_vertical = 2

[node name="reel" parent="reelcontainer3" instance=ExtResource("1_em2ls")]
position = Vector2(929, 470)
scale = Vector2(1, 1)
reelId = 3

[node name="spinButton" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 87.0
offset_top = -55.0
offset_right = 105.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2

[node name="decreaseBetButton" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -54.0
offset_top = -52.0
offset_right = -41.0
offset_bottom = -39.0
grow_horizontal = 2
grow_vertical = 2

[node name="increaseBetButton" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 22.0
offset_top = -52.0
offset_right = 35.0
offset_bottom = -39.0
grow_horizontal = 2
grow_vertical = 2

[node name="betAmount" type="Label" parent="."]
z_index = 4
z_as_relative = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -31.0
offset_top = -55.9999
offset_right = 20.0
offset_bottom = -29.9999
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.9, 0.9)
text = "$"

[node name="result" type="Label" parent="."]
z_index = 4
z_as_relative = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -29.9999
offset_top = 32.0
offset_right = 21.0001
offset_bottom = 58.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.9, 0.9)
text = "$"

[node name="spinSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_j0np1")

[connection signal="button_up" from="spinButton" to="." method="_on_spin_button_up"]
[connection signal="button_up" from="decreaseBetButton" to="." method="_on_decrease_bet_button_up"]
[connection signal="button_up" from="increaseBetButton" to="." method="_on_increase_bet_button_up"]
